@@ -4,6 +4,8 @@
           (Thanks to Jörg Krause, Ben Boeckel).
 - TW-1845 Cygwin build fails, missing get_current_dir_name
           (thanks to hosaka).
+- TI-27   Continue tracking by ID
+          (thanks to Dennis Schubert)
 - TI-29   timew config can't add new value
           (thanks to Yury Vidineev)
 - TI-32   taskwarrior hook script doesn't stop recording waiting task
